--- a/default.conf
+++ b/default.conf
@@ -26,17 +26,31 @@ server {
 
         location /test1 {
             # baseCorsHeaders:
+            ## если front.local указывает xhr.withCredentials = true; то в 'Access-Control-Allow-Origin' не может быть *
+            ## тут будет Access-Control-Allow-Origin: https://front.local:8901 наличие порта очень важно (если он не 80)
             add_header 'Access-Control-Allow-Origin' $http_origin always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+            ## разрешим браузеру сохранять куку на сайте back.local даже если запрос идет с front.local:
             add_header 'Access-Control-Allow-Credentials' 'true';
             # additionalCorsHeaders (base for non OPTIONS request):
             add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
             # custom header:
+            add_header 'Content-Type' 'application/json; charset=utf-8';
             add_header 'Access-Control-Max-Age' 1;
-            add_header 'Set-Cookie' 'test1=t1';
+            add_header 'Set-Cookie' 'test1a=a1;';
+            add_header 'Set-Cookie' 'test1b=b1; path=/;';
+            add_header 'Set-Cookie' 'test1c=c1; path=/; domain=back.local;';
+            add_header 'Set-Cookie' 'test1d=d1; path=/; domain=back.local; secure;';
+            ## если в браузере просто открыть страницу /test1 то в браузер сохрянятся следующие 2 куки:
+            add_header 'Set-Cookie' 'test1e=e1; path=/; domain=back.local; secure; HttpOnly;';
+            ## если front.local указывает xhr.withCredentials = true; то браузер на back.local сохряняет куку:
+            add_header 'Set-Cookie' 'test1f=f1; path=/; domain=back.local; secure; HttpOnly; SameSite=none';
             # custom result:
-            return 200 '{"result":"ok"}';
+            return 200 '{"any":"string"}';
         }
+
+        add_header 'Content-Type' 'text/plain; charset=utf-8';
+        return 200 'Your cookies: $http_cookie';
     }
 }
