--- a/default.conf
+++ b/default.conf
@@ -24,7 +24,7 @@ server {
            return 204;
         }
 
-        location /test1 {
+        location /page-set-cookies {
             # baseCorsHeaders:
             ## если front.local указывает xhr.withCredentials = true; то в 'Access-Control-Allow-Origin' не может быть *
             ## тут будет Access-Control-Allow-Origin: https://front.local:8901 наличие порта очень важно (если он не 80)
@@ -38,16 +38,18 @@ server {
             # custom header:
             add_header 'Content-Type' 'application/json; charset=utf-8';
             add_header 'Access-Control-Max-Age' 1;
-            add_header 'Set-Cookie' 'test1a=a1;';
-            add_header 'Set-Cookie' 'test1b=b1; path=/;';
-            add_header 'Set-Cookie' 'test1c=c1; path=/; domain=back.local;';
-            add_header 'Set-Cookie' 'test1d=d1; path=/; domain=back.local; secure;';
-            ## если в браузере просто открыть страницу /test1 то в браузер сохрянятся следующие 2 куки:
-            add_header 'Set-Cookie' 'test1e=e1; path=/; domain=back.local; secure; HttpOnly;';
-            ## если front.local указывает xhr.withCredentials = true; то браузер на back.local сохряняет куку:
-            add_header 'Set-Cookie' 'test1f=f1; path=/; domain=back.local; secure; HttpOnly; SameSite=none';
+            add_header 'Set-Cookie' 'test0=t0;';
+            add_header 'Set-Cookie' 'test1=t1; path=/;';
+            add_header 'Set-Cookie' 'test2=t2; path=/; domain=back.local;';
+            add_header 'Set-Cookie' 'test3=t3; path=/; domain=back.local; secure;';
+            add_header 'Set-Cookie' 'test4=t4; path=/; domain=back.local; secure; HttpOnly;';
+            add_header 'Set-Cookie' 'test5=t5; path=/; domain=back.local; secure; HttpOnly; SameSite=none;';
+            add_header 'Set-Cookie' 'test6=t6; path=/; domain=back.local; secure; SameSite=none;';
+            add_header 'Set-Cookie' 'test7=t7; path=/; domain=back.local; SameSite=none;';
+            add_header 'Set-Cookie' 'test8=t8; path=/; SameSite=none;';
+            add_header 'Set-Cookie' 'test9=t9; SameSite=none;';
             # custom result:
-            return 200 '{"any":"string"}';
+            return 200 '{"your cookies that was set BEFORE the request":"$http_cookie"}';
         }
 
         add_header 'Content-Type' 'text/plain; charset=utf-8';
